--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "async": "^3.2.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.8.0",
+    "helmet": "^4.2.0",
     "http-errors": "~1.6.3",
     "luxon": "^1.25.0",
     "mongoose": "^5.11.5",
